# vectordb-benchmark

./: .gitattributes  .gitignore  1-prepare_dataset.py  2-prepare_db.py  3-generate-testset.py  3-prepare-testset.py  CLAUDE.md  Dockerfile  README.md  benchmark_locust_milvus.py  benchmark_locust_pgvector.py  benchmark_locust_qdrant.py  common.py  corrupted_lines.txt  docker-compose.yaml  prepare_custom_query-qdrant.py  prepare_custom_query.py  prepare_dataset_csv.py  prepare_dataset_hf.py  prepare_db_milvus.py  prepare_db_pgvector.py  prepare_db_qdrant.py  prepare_qdrant.py  pyproject.toml  requirements.txt  taskfile.yaml
.github/workflows/: cd.yaml  changelog.yml  opencommit.yaml  scan.yaml
benchmark/: benchmark_locust_milvus.py  benchmark_locust_qdrant.py  perf-qdrant.py
chroma_db/: chroma.sqlite3
config/: chroma.py  common.py
data/: data-example.jsonl  dataset.csv  questions.txt  testset.json
data/videogame/: questions.txt  testset.json
docker/chroma/: docker-compose.yaml
docker/openlit/: docker-compose.yml  requirements.txt
docker/qdrant/: docker-compose.yaml
milvus/: docker-compose.yaml
openlit/: docker-compose.yml  requirements.txt
pgvector/: docker-compose.yaml
qdrant/: docker-compose.yaml
test/: debug_dataset.py  loading.py  test_dataset.py
tools/: check-milvus.py
vectordb_benchmark.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
