[build-system]
requires = ["setuptools>=61.0"]  # 🔧 Config standard
build-backend = "setuptools.build_meta"

[project]  # 📦 Infos projet
name = "vectordb-benchmark"
version = "0.2.0"
description = "Vector Db benchmark with locust"
readme = "README.md"
authors = [
    {name = "Christian DIDELOT", email = "chris@dc-consulting.pro"}
]

dependencies = [  # 📚 Dépendances
    "ruff>=0.8.2",
    "loguru>=0.7.3",
    "pymilvus>=2.5.0",
    "locust>=2.32.4", 
    "pydantic>=2.10.3",
    "flagembedding>=1.3.3",
    "qdrant-client",
    "chromadb",
    "openlit>=1.33.4"
]

[project.urls]  # 🔗 Liens optionnels
repository = "https://github.com/didlawowo/vectordb-benchmark.git"

 