[build-system]
requires = ["setuptools>=61.0"]  # 🔧 Config standard
build-backend = "setuptools.build_meta"

[project]  # 📦 Infos projet
name = "vectordb-benchmark"
version = "0.1.0"
description = "Vector Db benchmark with locust"
readme = "README.md"
authors = [
    {name = "Romain Guilmont", email = "romain@askforthemoon.com"},
    {name = "Christian DIDELOT", email = "chris@dc-consulting.pro"}
]

dependencies = [  # 📚 Dépendances
    "ruff>=0.8.2",
    "loguru>=0.7.3",
    "pymilvus>=2.5.0",
    "locust>=2.32.4", 
    "pydantic>=2.10.3",
    "flagembedding>=1.3.3",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6"
]

[project.urls]  # 🔗 Liens optionnels
repository = "https://github.com/didlawowo/vectordb-benchmark.git"

